2007-08-31  Darren Kenny  <darren.kenny@sun.com>

	* pixmaps/earth-info.png, pixmaps/earth-normal.png:
	  Upated icons to version based off the Nimbus theme.

2007-08-24  Lin Ma  <Lin.Ma@Sun.COM>

	* TODO.txt: updated
	* capplet/nwam_conn_stat_panel.c: (nwam_conn_status_panel_init),
	(nwam_conn_status_panel_refresh), (nwam_conn_status_add),
	(nwam_conn_status_update_status_cell_cb), (on_nwam_enm_notify_cb),
	(on_nwam_ncu_notify_cb): connect ncu notify signal to update
	tree view. fixed some memory leaks.
	* capplet/nwam_pref_dialog.c: (nwam_capplet_dialog_init),
	(change_show_combo_model), (nwam_capplet_dialog_select_ncu):
	the model of show_combo is updated to contain G_TYPE_POINTER,
	because the content comes from daemon. maybe later fix will make
	daemon returns a tree list model which is more reasonable. make
	sure ref/unref is correctly handled which doesn't do right now,
	but the more correctly ref/unref should be handled in
	nwam_conn_status_panel rather than here.

2007-08-23  Lin Ma  <Lin.Ma@Sun.COM>

	* Makefile.am: add *.spec to extra_dist
	* SUNWnwam-manager.spec: add session start file
	* TODO.txt: updated
	* capplet/nwam_conn_stat_panel.c:
	(nwam_conn_status_panel_class_init), (nwam_conn_status_panel_init),
	(nwam_conn_status_panel_finalize), (on_nwam_env_notify_cb),
	(on_nwam_enm_notify_cb): code for update env/vpn labels
	* capplet/nwam_env_pref_dialog.c: (env_selection_changed_cb):
	remove g_assert, because each time run nwam_env_pref_dialog, 
	combobox will be refilled, so gtk_combo_box_get_active_iter will
	return FALSE when all entries are removed.
	* capplet/nwam_vpn_pref_dialog.c: (nwam_vpn_add), (populate_panel),
	(vpn_pref_clicked_cb), (nwam_vpn_selection_changed),
	(on_nwam_enm_notify_cb): code for update start/stop button and enm
	status on the tree view.
	* daemon/Makefile.am: fixed nwam-manager.desktop issue.
	* daemon/nwam-manager.desktop.in: fixed application name.
	* daemon/nwam-menu.c: (on_nwam_wifi_notify_cb),